%%{init: {"er": {"nodeSpacing": 20, "rankSpacing": 25, "entityPadding": 3, "minEntityWidth": 30}}}%%
erDiagram
    menu_stocks {
        bigint id PK
        bigint menu_id FK
        enum unit
        decimal low_stock_threshold
        boolean is_active
        varchar batch_mode
        timestamp deleted_at
        timestamp created_at
        timestamp updated_at
    }
    menu_stock_batches {
        bigint id PK
        bigint menu_stock_id FK
        decimal quantity
        date expiry_date
        timestamp received_at
        decimal cost_per_unit
    }
    menu_stock_adjustments {
        bigint id PK
        bigint menu_stock_id FK
        enum adjustment_type
        decimal quantity
        decimal quantity_before
        decimal quantity_after
        varchar reason
        bigint reported_by FK
        timestamp adjusted_at
        timestamp created_at
        timestamp updated_at
    }
    menu_stock_movements {
        bigint id PK
        bigint menu_stock_id FK
        bigint menu_stock_batch_id FK
        bigint order_id FK
        bigint order_item_id FK
        bigint menu_stock_adjustment_id FK
        enum movement_type
        varchar source_type
        varchar source_id
        decimal quantity_before
        decimal quantity_change
        decimal quantity_after
        decimal unit_cost
        varchar reference
        text notes
        bigint recorded_by FK
        timestamp created_at
        timestamp updated_at
    }
    menus {
        bigint id PK
        varchar name
        decimal price
        boolean is_available
        boolean is_stock_calculated
    }

    menus ||--o| menu_stocks : ""
    menu_stocks ||--o{ menu_stock_batches : ""
    menu_stocks ||--o{ menu_stock_movements : ""
    menu_stocks ||--o{ menu_stock_adjustments : ""
    menu_stock_batches ||--o{ menu_stock_movements : ""
